# beneficiary-fhir-data

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets  .terraform-docs.yml  .travis.yml  CODE_OF_CONDUCT.md  COMMUNITY.md  COMMUNITY_GUIDELINES.md  CONTRIBUTING.md  GOVERNANCE.md  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  ansible-playbook-wrapper  ansible.cfg  aws-mfa-refresh.sh  aws_security_setup.yml  backend.yml  bootstrap.yml  build_server.yml  build_tables.py  code.json  data_server_collect_flame_graph.yml  database_server.yml  etl_server_redeploy.yml  extra_facts.yml  fhir_server_ami.yml  fhir_servers_elb.yml  hosts  hosts-production  hosts_development  hosts_production  hosts_production_az_a  hosts_test  install_dev_tools.sh  install_roles.yml  (+19 more)
apps/: .dockerignore  .env.example  .gitignore  1  Dockerfile  Dockerfile.local  Makefile  README.md  build-ccs.groovy  build.groovy  checkstyle.xml  docker-compose.yml  module-info.java  not-a-script.test  pom.xml  pyproject.toml  readme-dev.md  rules.xml  sonar-project.properties  test-script1.sh  test-script2.sh  toolchains.xml
apps/ bfd-data-fda/: Jenkinsfile  pom.xml
apps/bfd-common/: pom.xml
apps/bfd-common/bfd-common-util/: pom.xml
apps/bfd-data-fda/: Jenkinsfile  README.md  pom.xml
apps/bfd-data-npi/: Jenkinsfile  README.md  build.sh  pom.xml
apps/bfd-data-utilities-fda-drug/: Jenkinsfile  pom.xml
apps/bfd-data-utilities-npi/: pom.xml
apps/bfd-data-utilities-npi-org/: Jenkinsfile  pom.xml
apps/bfd-db-migrator/: README.md  pom.xml
apps/bfd-db-migrator-ng/: Dockerfile  README.md  migrate-env.sh  migrate-local.sh  migrate.sh  pom.xml
apps/bfd-db-migrator-ng/callbacks/: afterMigrate__grant-user-perms.sql
apps/bfd-db-migrator-ng/migrations/: R__beneficiary_part_c_and_d_enrollment_view.sql  V1_11_0__add_contract_contact.sql  V1_11_0__add_last_updated_tables.sql  V1_12_0__add_last_updated_columns.sql  V1_12_0__add_mapd_enrlmt.sql  V1_12_0__add_provider_npi_columns.sql  V1_13_0__add_financial_fields.sql  V1_13_0__add_mapd_enrlmt.sql  V1_13_1__add_rx_financial_field.sql  V1_14_0__add_mapd_enrlmt.sql  V1_15_0__add_provider_idr_dates.sql  V1_17_0__add_missing_financial_fields.sql  V1_18_0__add_claim_outpatient_service_type_cd.sql  V1_18_0__add_meta_src_sk.sql  V1_1_0__initial.sql  V1_20_0__update_beneficiary_entitlement_view.sql  V1_21_0__add_claim_status.sql  V1_21_0__add_obsolete_contracts.sql  V1_21_0__new_schema_claim.sql  V1_21_0__new_schema_coverage.sql  V1_22_0__add_claim_status.sql  V1_22_0__new_schema_claim.sql  V1_23_0__new_schema_claim.sql  V1_23_1__drop_old_claims_tables.sql  V1_23_2__add_derived_dates.sql  V1_24_0__drop_provider_history.sql  V1_25_0__reorder_bene_cov_fields.sql  V1_26_0__drop_extra_columns.sql  V1_27_0__bene_ssn.sql  V1_28_0__idr_load_events.sql  V1_28_0__patient_match.sql  V1_28_0__ssn_idx.sql  V1_28_1__load_events_tracking.sql  (+28 more)
apps/bfd-db-migrator-synthetic/: Dockerfile  Dockerfile.dockerignore  README.md  migrate.sh  pom.xml
apps/bfd-model/: README.md  pom.xml
apps/bfd-model-idr/: .gitignore  .pre-commit-config.yaml  Benes-AB2D.csv  Benes-Sandbox.csv  README.md  SYNTHETIC_BENE_HSTRY.csv  application.yaml  augment_sample_resources.py  claims_adj.py  claims_generator.py  claims_other.py  claims_pac.py  claims_priorauth.py  claims_static.py  claims_static_data.py  claims_util.py  compile-all-resources.sh  compile_resources.py  dd_helper_script.py  docker-compose.yml  eval_fhirpath.js  fhir-settings.json  field_constants.py  find_missing_fields.py  foo.py  gen_dd.py  generate_prior_auth_sample.py  generator_util.py  load_splitter.py  matchbox_profiles.txt  old_benes_sandbox.csv  patient_generator.py  pyproject.toml  security_labels.yml  setup_matchbox.py
apps/bfd-model-metadata/: README.md  pom.xml
apps/bfd-ops/: pom.xml
apps/bfd-pipeline/: .gitattributes  CONTRIBUTING.md  README.md  pom.xml
apps/bfd-pipeline-idr/: Dockerfile  Dockerfile.dockerignore  README.md  batch_worker.py  constants.py  db_utils.py  extractor.py  idr-bfd-compare.sh  idr_bfd_compare.py  last_updated.py  load-credentials.sh  load-synthetic-env.sh  load_events.py  load_partition.py  load_progress_utils.py  load_synthetic.py  loader.py  logger_config.py  mock-idr.sql  model.py  parallel_executor.py  pipeline.py  pipeline_nodes.py  pipeline_stages.py  pipeline_utils.py  pydantic_utils.py  pyproject.toml  run-db.sh  settings.py  test_pipeline.py  timer.py
apps/bfd-server/: Jenkinsfile  README.md  pom.xml
apps/bfd-server-ng/: .gitignore  DESIGN.md  README.md  pom.xml
apps/bfd-server-openapi/: pom.xml
apps/bfd-server-plaid/: Cargo.toml  README.md  build.rs
apps/bfd-server-test-functions/: pom.xml
apps/bfd-server-test-perf/: Jenkinsfile  README.md  pom.xml
apps/bfd-shared-test-utils/: pom.xml
apps/bfd-shared-utils/: pom.xml
apps/containers/: Dockerfile  toolchains.xml
apps/coverage-aggregate/: pom.xml
apps/dependencies/: dependency-check-10-12-2020.csv
apps/dev/: docker-compose.yml
apps/report-aggregate/: pom.xml
ops/: .gitignore  Dockerfile  LOCAL_SETUP.md  README.md  deploy-ccs.groovy  deploy-healthapt.groovy  deploy-hhsdevcloud.groovy  pyproject.toml
ops/ansible/: ansible.cfg  build_bfd-platinum.yml  launch_bfd-db-migrator.yml
ops/ccs-ops-misc/: DEPLOY-INFO.md  README.md
ops/fhir_validations/: BFD-3047-filter.py  README.md  diff_check.py  validations.py  validations_ignorelist.yml
ops/jenkins/: Dockerfile.cbc-build  cbc-build-push.sh  jdk11.toolchains.xml  jdk8.toolchains.xml
ops/k8s/: README.md
ops/keys/: bfd-mgmt.pub  bfd-prod-sbx.pub  bfd-prod.pub  bfd-test.pub
ops/packer/: build_bfd-all.json  build_bfd-db-migrator.json  build_bfd-docker-host.json  build_bfd-pipeline.json  build_bfd-platinum-amzn2.json  build_bfd-platinum.json  build_bfd-server-load.json  build_bfd-server.json  build_etl.json  build_jenkins.json  build_platinum.json  build_server-load.json  disk_space.sh  update_jenkins.json
ops/platform/: README.md  root.tofu.tf
ops/services/: README.md  root.tofu.tf
ops/terraform/: .gitignore  README.md
(+11307 files in other folders)
