[project]
name = "bfd-workspace"
version = "0.1.0"
description = "BFD Python workspace for unified dependency management"
requires-python = "~=3.13.0"
dependencies = [
    # bfd-pipeline-idr dependencies
    "cryptography>=45.0.6",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic>=2.11.9",
    "snowflake-connector-python>=3.17.4",
    "ray==2.47",
    "sf-hamilton[ray]==1.88.0",
    # sftp-outbound-transfer dependencies
    "aws-lambda-powertools[all]",
    "paramiko",
    "boto3",
    # samhsa-regression-tests dependencies
    "aiohttp>=3.13.0",
    "asyncclick>=8.3.0.5",
    "anyio>=4.11.0",
    "pyyaml>=6.0.3",
]

[tool.uv.workspace]
members = [
    "bfd-model-idr",
    "bfd-pipeline/bfd-pipeline-idr",
    "bfd-server-ng/codegen",
    "utils/synthetic-load-converter",
    "utils/locust_tests",
    "utils/samhsa-regression-tests",
    "../ops/services/02-eft/lambda_src/sftp_outbound_transfer",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.13.2",
    "pyright==1.1.407",
    "pytest==8.4.2",
    "pytest-timeout>=2.1.0",
    # bfd-pipeline-idr dev dependencies
    "testcontainers>=4.13.1",
    # sftp-outbound-transfer dev dependencies
    "boto3-stubs[sns,ssm]",
]

# Inherit common tool configurations from root pyproject.toml

[tool.ruff.lint.per-file-ignores]
# Legacy scripts: relax linting rules for data generation, database scripts, and utilities
"bfd-model-idr/**/*.py" = ["ANN", "E501", "SIM102", "SIM108", "SIM115", "PTH104", "PTH119", "PTH120", "PTH123", "PTH208", "D200", "D401"]
"bfd-model/bfd-model-rif/**/*.py" = ["ANN", "D200", "D401"]
"bfd-server-ng/codegen/**/*.py" = ["ANN", "PTH123", "SIM108"]
"utils/**/*.py" = ["ANN", "PTH104", "PTH119", "PTH120", "PTH123", "PTH208", "SIM115"]
"../ops/services/02-eft/lambda_src/sftp_outbound_transfer/**/*.py" = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "E501"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv", "**/bfd-model-idr/**", "**/bfd-model-rif/**", "**/bfd-pipeline-idr/**", "**/locust_tests/**", "**/synthetic-load-converter/**", "**/sftp_outbound_transfer/**"]

