[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ops-specific Python configuration
# Inherits common tool settings (ruff, pyright, pytest) from root ../pyproject.toml
# Only ops-specific overrides below

# Override pyright settings for ops services using AWS Lambda Powertools
[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"
# AWS Lambda Powertools compatibility requires relaxed type checking
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
