[project]
name = "sythetic-data-generator"
version = "0.1.0"
description = " IDR Model Sythetic Data Generator"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "faker>=37.1.0",
    "pandas>=2.2.3",
    "xlsxwriter>=3.2.5",
    "pyyaml>=6.0.2",
    "pydantic>=2.12.3",
    "tqdm>=4.67.1",
    "click>=8.3.1",
    "requests>=2.32.5",
]
