[project]
name = "bfd-pipeline-idr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.6",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic>=2.11.9",
    "snowflake-connector-python>=3.17.4",
    "ray",
    "sf-hamilton>=1.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "uv>=0.8.22",
    "pytest>=8.4.2",
    "testcontainers>=4.13.1",
    "pyright>=1.1.406",
]

# [[tool.mypy.overrides]]
# module = ["testcontainers.*"]
# follow_untyped_imports = true

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100

[tool.ruff.lint]
select = [
    "D",    # pydocstyle
    "E501",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "ANN",
    "LOG",
    "G",
    "PT",
    "RSE",
    "PIE",
    "RET",
    "SLF",
    "ARG",
    "PTH",
    "PLE",
    "PLW",
    "PERF",
    "FURB",
    "RUF",
]
# Don't require docstrings
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
