[project]
name = "bfd-pipeline-idr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "cryptography>=45.0.6",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic>=2.11.9",
    "snowflake-connector-python>=3.17.4",
]

[dependency-groups]
dev = [
    "testcontainers>=4.13.1",
]
