[package]
name = "bfd-server-plaid-app"
version = "0.1.0"
authors = ["Karl M. Davis <karl.davis@cms.hhs.gov>"]
edition = "2018"

[dependencies]

# Provides access to the lookups data that the application needs.
bfd-server-plaid-lookups = { path = "../bfd-server-plaid-lookups" }

# Provide application logging facilities.
log = "0.4"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = { version = "2.3.0" }
slog-stdlog = { version = "4.0.0" }
slog-scope = { version = "4.1.2" }
slog-json = { version = "2.3.0" }
slog-term = { version = "2.4.1" }

# Read environment variables from a file, if present.
dotenv = "0.14.1"

# Allow for complex static variables.
lazy_static = "1.4.0"

# Actix is the web framework used by this application.
actix-web = { version = "1.0", features = ["ssl", "rust-tls"] }
rustls = { version = "0.15.2", features = ["logging"] }
webpki = "0.19" # Only included as it's part of rustls's public API. Has to match version used by rustls.
openssl = { version = "0.10" }
openssl-sys = "0.9"

# Serde is used for JSON serialization.
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_derive = "1.0"
json = "*"

# The ORM used to access the application's database.
diesel = { version = "1.0.0", features = ["r2d2", "postgres", "64-column-tables", "numeric", "chrono"] }
bigdecimal = "0.1.0"

# Allows for auto-reload of the server in development, per https://actix.rs/docs/autoreload/.
listenfd = "0.3"

# Date & time.
chrono = { version = "0.4.9", features = ["serde"] }

# Regular expressions.
regex = "1.3.1"
