[package]

name = "bfd-server-plaid-app"
version = "0.1.0"
authors = ["Karl M. Davis <karl.davis@cms.hhs.gov>"]
edition = "2018"


[profile.release]

# Ensure that debug symbols are left in compiled release binaries, as they can aid with
# investigating bugs and performance issues in production.
debug = true


[dependencies]

# Provides access to the lookups data that the application needs.
bfd-server-plaid-lookups = { path = "../bfd-server-plaid-lookups" }

# Provide application logging facilities.
log = "0.4"
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = { version = "2" }
slog-stdlog = { version = "4" }
slog-scope = { version = "4" }
slog-json = { version = "2" }
slog-term = { version = "2" }

# Read environment variables from a file, if present.
dotenv = "0.15"

# Allow for complex static variables.
lazy_static = "1"

# Actix is the web framework used by this application.
actix-web = { version = "2", features = ["openssl", "rustls"] }
actix-rt = "1"
rustls = { version = "0.16", features = ["logging"] }
webpki = "0.21" # Only included as it's part of rustls's public API. Has to match version used by rustls.
num_cpus = "1"

# Serde is used for JSON serialization.
serde = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
serde_derive = "1"
json = "*"

# The ORM used to access the application's database.
diesel = { version = "1", features = ["r2d2", "postgres", "64-column-tables", "numeric", "chrono"] }
bigdecimal = "0.1"

# Allows for auto-reload of the server in development, per https://actix.rs/docs/autoreload/.
listenfd = "0.3"

# Date & time.
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions.
regex = "1"
