[package]
name = "bfd-server-plaid-lookups-codegen"
version = "0.1.0"
authors = ["Karl M. Davis <karl.davis@cms.hhs.gov>"]
edition = "2018"

[dependencies]

# Download source lookups data files.
reqwest = "0.9"
tempfile = "3.1"
zip = "0.5" # FIXME: recently went unmaintained; find a replacement
encoding = "0.2"

# Generate "perfect hash" tables of the app's lookup data.
phf_codegen = "0.8"

# Parse the input data files used for the app's lookup data.
csv = "1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4.0"
regex = "1.3.1"
