[package]
name = "bfd-server-plaid-lookups-codegen"
version = "0.1.0"
authors = ["Karl M. Davis <karl.davis@cms.hhs.gov>"]
edition = "2018"

[dependencies]

# Download source lookups data files.
reqwest = { version = "0.10", features = ["blocking"] }
tempfile = "3"
zip = "0.5" # FIXME: recently went unmaintained; find a replacement
encoding = "0.2"

# Generate "perfect hash" tables of the app's lookup data.
phf_codegen = "0.8"

# Parse the input data files used for the app's lookup data.
csv = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
lazy_static = "1"
regex = "1"
