[package]
name = "db-query-checker"
version = "0.1.0"
edition = "2018"

[dependencies]

# Easier idiomatic error handling for applications.
# Eyre is a mostly-drop-in replacement for `anyhow`,
#   but with `color-eyre` can leverage `SpanTrace`s when reporting errors.
eyre = "0.6"
color-eyre = "0.5"

# Read in env vars from a `.env` file.
dotenv = "0.15"

# Allows us to make this application async.
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Advanced logging that provides context on where in code path events are occurring.
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-error = "0.1"

# Asynchronous database client.
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "json", "offline"] }

# Allows us to combine iterators combinatorially.
itertools = "0.10"

# Used to write out the application's CSV data file.
csv-async = { version = "1", features = ["tokio", "with_serde"] }
serde = { version = "1", features = ["derive"] }

# Allows us to define static hash maps at compile time.
lazy_static = "1"

# Gives us some date handling functionality
chrono = "0.4"