[project]
name = "locust-tests"
version = "1.0.0"
dependencies = [
  "locust>=2.37.4",
  "boto3>=1.38.19",
  "flask>=3.1.1",
  "flask-cors>=6.0.0",
  "requests>=2.32.2",
  "gevent>=24.11.1",
  "urllib3>=2.4.0",
  "werkzeug>=3.0.6",
  "jinja2>=3.1.6",
  "idna>=3.7",
  "certifi>=2025.4.26",
  "psycopg[binary,pool]>=3.2.9",
]

[dependency-groups]
dev = [
  "types-boto3[essential,ssm]>=1.38.19",
  "types-gevent>=25.4.0.20250516",
]
# Install this dependency group (via uv [sync|run] --group lambda-run-locust) when working on the
# run-locust Lambda
lambda-run-locust = ["aws-lambda-powertools[all]>=3.8.0"]

# Inherits tool configurations from 
# ../../pyproject.toml (apps workspace) and 
# ../../../pyproject.toml (root)

[tool.locust]
# Specify locust test parameters here or on the command line
# See https://docs.locust.io/en/stable/configuration.html#pyproject-toml
# headless = true
# users = <# users>
# spawn-rate = <# users to spawn>

# These parameters are custom-defined parameters needed to run BFD-specific tests.
# See the README for more information
# spawned-runtime = 10s
# table-sample-percent = 0.25
# client-cert-path = /some/path/to/client/cert
# stats-store-file = true
# stats-env = TEST
# stats-store-tag = some_tag
# stats-store-tag = some_tag2
# stats-compare-previous = true

[tool.pyright]
# Project-specific pyright overrides for locust_tests
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportMissingParameterType = false
reportConstantRedefinition = false
reportMissingTypeStubs = false
