[project]
name = "samhsa-regression-tests"
version = "1.0.0"
dependencies = [
    "aiohttp>=3.13.0",
    "psycopg[binary]>=3.2.10",
    "asyncclick>=8.3.0.5",
    "anyio>=4.11.0",
    "pydantic>=2.12.2",
    "pyyaml>=6.0.3",
]

# Inherits tool configurations from 
# ../../pyproject.toml (apps workspace) and 
# ../../../pyproject.toml (root)

[tool.pyright]
venvPath = "."
venv = ".venv"
