[project]
name = "bfd-mgmt-mount-certstores"
version = "1.0.0"
readme = "README.md"
dependencies = ["boto3", "click"]

[dependency-groups]
dev = ["boto3-stubs[s3,ssm]", "ruff", "uv"]

# Inherits all tool configurations from 
# ../../pyproject.toml (ops intermediate) and 
# ../../../pyproject.toml (root)
